Fix YouTube video visibility on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3356,6 +3356,22 @@ input, select, textarea {
   height: 100%;
 }
 
+                @media screen and (max-width: 736px) {
+
+.iframe-container iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  width: 100%;
+  height: 100%;
+}
+
+
+                }
+
+
 /* Wrapper */
 
 	#wrapper > * > .inner {
